--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,17 +51,109 @@
 				<a href="index.html" title="" class="logo">
 					<img src="img/logo-fbh.png">
 				</a>
-				<nav id="nav">
-					<a href="sobre_fbh.html" title="">Sobre <br>a FBH</a>
-					<a href="#" title="">Representação <br> governamental</a>
-					<a href="#" title="">Publicações <br> FBH</a>
-					<a href="#" title="">Indicadores <br> de saúde</a>
-					<a href="#" title="">Legislação</a>
-					<a href="#" title="">Notícias <br> da área</a>
-					<a href="#" title="">Calendário <br> de eventos</a>
-					<a href="#" title="">Sala de <br> imprensa</a>
-					<a href="#" title="">fale <br> conosco</a>
-				</nav>
+				<ul id="nav">			
+					<li>
+						<a href="sobre_fbh.html" title="">Sobre <br>a FBH</a>
+						<ul>
+							<li>
+								<a href="#" title="">Quem somos</a>
+							</li>
+							<li>
+								<a href="#" title="">Palavra do presidente</a>
+							</li>
+							<li>
+								<a href="#" title="">Associações</a>
+							</li>
+							<li>
+								<a href="#" title="">Estatuto</a>
+							</li>
+							<li>
+								<a href="#" title="">O que é saúde suplementar</a>
+							</li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="#" title="">Representação <br> governamental</a>
+
+						<ul>
+							<li>
+								<a href="#" title="">Ministério da Saúde</a>
+							</li>
+							<li>
+								<a href="#" title="">SUS</a>
+							</li>
+							<li>
+								<a href="#" title="">Anvisa</a>
+							</li>
+							<li>
+								<a href="#" title="">CNS</a>
+							</li>
+							<li>
+								<a href="#" title="">ANS</a>
+							</li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="#" title="">Publicações <br> FBH</a>
+
+						<ul>
+							<li>
+								<a href="#" title="">Livros</a>
+							</li>
+							<li>
+								<a href="#" title="">Revista Visão hospitalar</a>
+							</li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="#" title="">Indicadores <br> de saúde</a>
+					</li>
+					<li>
+						<a href="#" title="">Legislação</a>
+					</li>
+					<li>
+						<a href="#" title="">Notícias <br> da área</a>
+
+						<ul>
+							<li>
+								<a href="#" title="">Notícias do Setor</a>
+							</li>
+							<li>
+								<a href="#" title="">Notícias da FBH</a>
+							</li>
+							<li>
+								<a href="#" title="">Informativos</a>
+							</li>
+							<li>
+								<a href="#" title="">Circulares</a>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" title="">Calendário <br> de eventos</a>
+					</li>
+					<li>
+						<a href="#" title="">Sala de <br> imprensa</a>
+
+						<ul>
+							<li>
+								<a href="#" title="">releases</a>
+							</li>
+							<li>
+								<a href="#" title="">FBH na mídia</a>
+							</li>
+							<li>
+								<a href="#" title="">Assessoria de imprensa</a>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" title="">fale <br> conosco</a>
+					</li>
+				</ul>
 
 				<div id="navMobile">
 					<a href="#" title="">Menu <img src="img/menuMobile.png" alt=""></a>
