Quem somos - exemplo de page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,13 +53,10 @@
 				</a>
 				<ul id="nav">			
 					<li>
-						<a href="sobre_fbh.html" title="">Sobre <br>a FBH</a>
+						<a href="#" title="">Sobre <br>a FBH</a>
 						<ul>
 							<li>
-								<a href="#" title="">Quem somos</a>
-							</li>
-							<li>
-								<a href="#" title="">Palavra do presidente</a>
+								<a href="sobre_fbh.html" title="">Quem somos</a>
 							</li>
 							<li>
 								<a href="#" title="">Associações</a>
