--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -158,7 +158,6 @@ body
 							background: $corPrincipal
 							width: 250px
 							position: absolute
-							top: 100px
 							left: 0px
 							overflow: hidden
 
@@ -197,8 +196,8 @@ body
 					.logo
 						+grid(2)
 						padding: 10px 0
-					nav
-						a
+					#nav
+						& > li, & > li > a
 							height: 80px
 
 	& > section
@@ -714,20 +713,165 @@ body
 				+animate(fadeIn, $delay: 1s)
 
 	#pageContent
+		padding: 0
 		.wrapper
 			+grid-system(12)
-			padding: 40px 0
+			padding: 20px 0 0 0
 
 			& > *
-				+grid(12)
 				margin-bottom: 50px
 
-				& > h2
+				& > h1
 					display: block
 					width: 100%
 					text-align: center
-					font-size: 40px
-					font-weight: 300
+
+			& > section
+				opacity: 0
+				padding-top: 40px
+				&.active
+					+animate(fadeInUp)
+
+
+
+
+
+
+// ------------------------------------------------------------------
+// PAGE Includes
+// ------------------------------------------------------------------
+
+img.left
+	float: left
+	margin: 0 30px 20px 0
+
+body #pageContent .wrapper > section
+	+grid(12)
+	img
+		margin-bottom: 20px
+
+	&.quote
+		+grid(12)
+		& > p:nth-of-type(1)
+			font-style: italic
+			font-size: 18px
+			font-weight: 400
+			color: $corPrincipal
+			position: relative
+			&:before, &:after
+				font-family: 'gf-icons'
+				speak: none
+				font-style: normal
+				font-weight: normal
+				font-variant: normal
+				text-transform: none
+				line-height: 1
+				-webkit-font-smoothing: antialiased
+				-moz-osx-font-smoothing: grayscale
+				font-size: 99
+				position: absolute
+				z-index: -1
+				color: $brancoCinza
+				font-size: 200px
+				top: -80px
+				left: 0
+				content: "\e650"
+			&:after
+				content: "\e64f"
+				right: 0
+				left: auto
+
+	&.equipe
+		+grid(12, $gutter-width: 0)
+		& > ul
+			li
+				position: relative
+				margin: 0
+				padding: 20px
+				padding-bottom: 0
+				margin-bottom: 10px
+				+grid(2, $gutter-width: 0)
+				+box-sizing(border-box)
+				+border-radius(10px)
+				
+				&, & *
+					+transition
+
+				& > img
+					+border-radius(100%)
+					display: block
+					float: none
+					+scale(0.8)
+					margin-bottom: -10px
+					width: 100%
+				h3
+					font-size: 24px
+					text-align: center
+					margin-bottom: 0
+					height: 80px
+					display: table-cell
+					vertical-align: middle
+
+				h4
+					font-size: 13px
+					color: $corPrincipal
+					text-align: center
+
+				&:hover
+					background: $brancoCinza
+					h3
+						+translateY(25px)
+					h4
+						opacity: 0
+
+					& > img
+						+scale(1)
+
+
+
+
+
+
+
+
+
+		
+
+
+
+
+
+
+
+		
+
+
+
+
+
+
+
+		
+
+
+
+
+
+
+
+		
+
+
+
+
+
+
+
+		
+
+
+
+
 
 
 
